// Vitest Snapshot v1

exports[`Util.ts > topLines 1`] = `
{
  "length": 9,
  "numLines": 3,
}
`;

exports[`Util.ts > topLines 2`] = `
{
  "length": 6,
  "numLines": 2,
}
`;

exports[`Util.ts topLines 1`] = `
Object {
  "length": 9,
  "numLines": 3,
}
`;

exports[`Util.ts topLines 2`] = `
Object {
  "length": 6,
  "numLines": 2,
}
`;
